Add initial .travis.yml
This just sets up the testing information.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A strict TypeScript runtime environment that supports AMD and helpers",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "exit 0"
   },
   "repository": {
     "type": "git",
