--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A strict TypeScript runtime environment that supports AMD and helpers",
   "main": "index.js",
   "scripts": {
-    "test": "exit 0"
+    "test": "exit 0",
+    "typings": "tsd install"
   },
   "repository": {
     "type": "git",
