--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A strict TypeScript runtime environment that supports AMD and helpers",
   "main": "index.js",
   "scripts": {
+    "build": "tsc --declaration --sourcemap index.ts",
     "pretest": "rimraf spec && tsc --module commonjs --outDir spec",
     "test": "jasmine JASMINE_CONFIG_PATH=jasmine.json",
     "typings": "tsd install"
